v0.15.0/_sources/generated/statsmodels.regression.quantile_regression.QuantRegResults.rst.txt
statsmodels.regression.quantile\_regression.QuantRegResults
===========================================================

.. currentmodule:: statsmodels.regression.quantile_regression

.. autoclass:: QuantRegResults
   :exclude-members: compare_f_test,compare_lm_test,compare_lr_test,conf_int,cov_params,f_test,get_prediction,get_robustcov_results,info_criteria,initialize,load,normalized_cov_params,predict,remove_data,save,scale,summary,summary2,t_test,t_test_pairwise,wald_test,wald_test_terms,

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~QuantRegResults.compare_f_test
      ~QuantRegResults.compare_lm_test
      ~QuantRegResults.compare_lr_test
      ~QuantRegResults.conf_int
      ~QuantRegResults.cov_params
      ~QuantRegResults.f_test
      ~QuantRegResults.get_prediction
      ~QuantRegResults.get_robustcov_results
      ~QuantRegResults.info_criteria
      ~QuantRegResults.initialize
      ~QuantRegResults.load
      ~QuantRegResults.normalized_cov_params
      ~QuantRegResults.predict
      ~QuantRegResults.remove_data
      ~QuantRegResults.save
      ~QuantRegResults.scale
      ~QuantRegResults.summary
      ~QuantRegResults.summary2
      ~QuantRegResults.t_test
      ~QuantRegResults.t_test_pairwise
      ~QuantRegResults.wald_test
      ~QuantRegResults.wald_test_terms
   
   
   

   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~QuantRegResults.HC0_se
      ~QuantRegResults.HC1_se
      ~QuantRegResults.HC2_se
      ~QuantRegResults.HC3_se
      ~QuantRegResults.aic
      ~QuantRegResults.bic
      ~QuantRegResults.bse
      ~QuantRegResults.centered_tss
      ~QuantRegResults.condition_number
      ~QuantRegResults.cov_HC0
      ~QuantRegResults.cov_HC1
      ~QuantRegResults.cov_HC2
      ~QuantRegResults.cov_HC3
      ~QuantRegResults.eigenvals
      ~QuantRegResults.ess
      ~QuantRegResults.f_pvalue
      ~QuantRegResults.fittedvalues
      ~QuantRegResults.fvalue
      ~QuantRegResults.llf
      ~QuantRegResults.mse
      ~QuantRegResults.mse_model
      ~QuantRegResults.mse_resid
      ~QuantRegResults.mse_total
      ~QuantRegResults.nobs
      ~QuantRegResults.prsquared
      ~QuantRegResults.pvalues
      ~QuantRegResults.resid
      ~QuantRegResults.resid_pearson
      ~QuantRegResults.rsquared
      ~QuantRegResults.rsquared_adj
      ~QuantRegResults.ssr
      ~QuantRegResults.tvalues
      ~QuantRegResults.uncentered_tss
      ~QuantRegResults.use_t
      ~QuantRegResults.wresid
   
   
   